--- a/project-to-do-list/style.css
+++ b/project-to-do-list/style.css
@@ -12,7 +12,7 @@ body {
 main {
   background-color: white;
   padding: 5%;
-  border-radius: 10%;
+  border-radius: 10px;
   text-align: center;
 }
 
